gccida/g3/may_trap_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/rtlanal.c:2756:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + *( ( unsigned __int8 *)x + 2)) == 2 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/rtlanal.c:2757:19: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| *( ( _DWORD *)&mode_class_0 + *( unsigned __int8 *)( x->fld[0].rtwint + 2)) == 2 
                  ^~~~~~~~~~~~
                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/rtlanal.c:2758:19: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| *( ( _DWORD *)&mode_class_0 + *( unsigned __int8 *)( *( _QWORD *)&x[1] + 2LL)) == 2 ) 
                  ^~~~~~~~~~~~
                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/rtlanal.c:2770:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int16 *)x[1]; 
                 ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/rtlanal.c:2778:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + *( ( unsigned __int8 *)x + 2)) == 2 || v9 == 54 && !*( ( _QWORD *)v7 + 1) ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/rtlanal.c:2789:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + *( ( unsigned __int8 *)x + 2)) != 2 ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/may_trap_p/src/obj/rtlanal.o] Error 1
